--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "typescript": "^5.7.2",
     "vite": "^7.2.0",
     "vite-plugin-dts": "^4.3.0"
+  },
+  "dependencies": {
+    "lucide-react": "^0.468.0"
   }
 }
