--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "vite-plugin-dts": "^4.3.0"
   },
   "dependencies": {
-    "lucide-react": "^0.468.0"
+    "lucide-react": "^0.468.0",
+    "prop-types": "^15.8.1"
   }
 }
