--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     },
-    "./styles.css": "./dist/styles.css",
+    "./styles.css": {"default": "./dist/styles.css"},
     "./animations.css": "./src/animations/animations.css"
   },
   "files": [
