--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
- "exports": {
-  ".": {
-    "import": "./dist/index.js",
-    "require": "./dist/index.cjs",
-    "types": "./dist/index.d.ts"
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./animations.css": "./dist/animations.css"
   },
-  "./styles.css": "./dist/styles.css",
-  "./animations.css": "./dist/animations.css"
-},
   "files": [
     "dist",
     "src/animations"
