--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "klarui-react",
-  "version": "0.1.35",
+  "version": "0.1.80",
   "description": "German-compliant React UI component library",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -66,6 +66,7 @@
     "rollup-plugin-copy": "^3.5.0",
     "typescript": "^5.7.2",
     "vite": "^7.2.0",
+    "vite-plugin-css-injected-by-js": "^3.5.2",
     "vite-plugin-dts": "^4.3.0"
   },
   "dependencies": {
